# pylite

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  globals.css  server.cjs  styles.css
src-py/: dfd_generator.py  pseudo_generator.py  structchart_generator.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file.rs  main.rs
src/components/: Editor.tsx  Explorer.tsx  Icons.tsx  Menu.tsx  Sidebar.tsx  Terminal.tsx  Titlebar.tsx  Welcome.tsx
src/components/ui/: accordion.tsx  button.tsx  checkbox.tsx  menubar.tsx  radio-group.tsx  textarea.tsx
src/themes/: default.json
src/utils/: FsHandler.tsx  LocalStorage.ts  Shortcuts.tsx
